@@ -21,6 +21,7 @@ setup(
 
     install_requires=[
         'fanstatic>=1.0a2',
+        'js.classy',
         'js.jquery',
         'js.json_template',
         'js.knockout',
