@@ -16,6 +16,7 @@ gocept.selenium = 2.0.0b4
 gocept.testing = 1.8
 httpagentparser = 1.2.2
 jasmine-core = 1.3.1
+js.classy = 1.4
 js.jquery = 1.9.1
 js.json-template = 0.8
 js.knockout = 2.2.0
