@@ -15,6 +15,8 @@ Change log for gocept.jsform
 
 - Removed the package metadata's implicit dependency on the test extra.
 
+- Use `classy <https://github.com/mitsuhiko/classy>`_ classes.
+
 
 1.1 (2014-04-07)
 ================
